import { FC } from "react";
import { SettingsScreen } from "src/screens/Settings";

const Settings: FC = () => {
  return <SettingsScreen />;
};

export default Settings;
