import { styled } from '../styles';

// TODO move to storybook
export const MenuButton = styled.TouchableOpacity`
  padding-vertical: 11px;
  padding-horizontal: 11px;
`;

export const BurgerMenuButton = styled(MenuButton)`
  padding-left: 18px;
`;
