...
        <Button
          style={{
            marginHorizontal: 18,
          }}
          backgroundColor="blue"
          textColor="white"
          text="Aktivieren"
          onPress={pressActivate}
          disabled={!pushActive}
        />
        <Button
          style={{
            marginHorizontal: 18,
...
